--- a/projects/front-components/src/lib/components/canvas/canvas.component.html
+++ b/projects/front-components/src/lib/components/canvas/canvas.component.html
@@ -1,7 +1,7 @@
 <div class="ss-lib-canvas">
   <ss-lib-header
-    [leftMenuTemplateRef]="leftMenuHeaderTemplateRef"
-    [rightMenuTemplateRef]="rightMenuHeaderTemplateRef">
+    [leftMenuTemplateRef]="leftMenuHeaderTemplateRef()"
+    [rightMenuTemplateRef]="rightMenuHeaderTemplateRef()">
   </ss-lib-header>
 
   <div class="ss-lib-canvas__body">
