Создать компонент loader

--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1,3 +1,6 @@
+<div class="spinners">
+  <ss-lib-spinner [text]="true"></ss-lib-spinner>
+</div>
 <ss-lib-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>
 
 <ss-lib-text [type]="TextType.BodyXs" [weight]="TextWeight.Regular">Обычный текст</ss-lib-text>
