--- a/projects/front-components/src/lib/components/spinner/spinner.component.html
+++ b/projects/front-components/src/lib/components/spinner/spinner.component.html
@@ -1,6 +1,6 @@
 <svg class="spinner" viewBox="0 0 50 50">
   <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="8"></circle>
 </svg>
-@if (text()) {
+@if (displaySpinnerText()) {
   <ss-lib-text [type]="TextType.BodySm" [weight]="TextWeight.Medium" [color]="Colors.TextBody2">Загрузка...</ss-lib-text>
 }
