--- a/projects/front-components/src/lib/components/canvas-content/canvas-content.component.scss
+++ b/projects/front-components/src/lib/components/canvas-content/canvas-content.component.scss
@@ -1,7 +1,7 @@
 .canvas-content {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 24px;
 
 	&__header {
 		display: flex;
@@ -11,6 +11,7 @@
 
 	&__body {
 		display: flex;
+    justify-content: center;
 		width: 100%;
 	}
 }
