--- a/projects/front-components/src/lib/components/canvas/canvas.component.scss
+++ b/projects/front-components/src/lib/components/canvas/canvas.component.scss
@@ -18,6 +18,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     padding: 32px 24px;
+    background-color: var(--surface-page);
   }
 
   &__scroll-content {
