--- a/projects/front-components/src/lib/components/empty-state/empty-state.component.scss
+++ b/projects/front-components/src/lib/components/empty-state/empty-state.component.scss
@@ -1,15 +1,41 @@
-.ss-lib-empty-state {
+@mixin flex-column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+}
+
+.ss-lib-empty-state {
+  @include flex-column;
   text-align: center;
-  gap: 20px;
+  border: 1px solid var(--border-primary);
+  border-radius: 8px;
+  background-color: var(--surface-primary);
+
+  &__header {
+    padding: 20px 24px;
+    display: flex;
+    justify-content: space-between;
+  }
 
   &__body {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    margin-bottom: 12px;
+    @include flex-column;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin: 40px 0 48px 0;
+  }
+
+  &__content-body {
+    @include flex-column;
+    gap: 16px;
+    align-items: center;
+    text-align: center;
+    max-width: 352px;
+  }
+
+  &__content-text {
+    @include flex-column;
+    gap: 4px;
+    align-items: center;
+    text-align: center;
   }
 }
