--- a/projects/front-components/src/lib/components/calendar/components/calendar-controls/calendar-controls.component.html
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-controls/calendar-controls.component.html
@@ -4,6 +4,7 @@
         [size]="ExtraSize.xs"
         [icon]="IconType.ChevronLeftDouble"
         [iconPosition]="IconPosition.OnlyIcon"
+        [disabled]="value().yearSameOrBefore(FIRST_DAY)"
         (click)="append({year: -1})"
     />
 
@@ -12,6 +13,7 @@
         [size]="ExtraSize.xs"
         [icon]="IconType.ChevronLeft"
         [iconPosition]="IconPosition.OnlyIcon"
+        [disabled]="value().monthSameOrBefore(FIRST_DAY)"
         (click)="append({month: -1})"
     />
 
@@ -31,6 +33,7 @@
         [size]="ExtraSize.xs"
         [icon]="IconType.ChevronRight"
         [iconPosition]="IconPosition.OnlyIcon"
+        [disabled]="value().monthSameOrAfter(LAST_DAY)"
         (click)="append({month: 1})"
     />
 
@@ -39,6 +42,7 @@
         [size]="ExtraSize.xs"
         [icon]="IconType.ChevronRightDouble"
         [iconPosition]="IconPosition.OnlyIcon"
+        [disabled]="value().yearSameOrAfter(LAST_DAY)"
         (click)="append({year: 1})"
     />
 </div>
