--- a/projects/front-components/src/lib/components/calendar/components/calendar-sheet/calendar-sheet.component.html
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-sheet/calendar-sheet.component.html
@@ -1,7 +1,7 @@
 <div class="calendar-sheet">
     <ss-lib-button
         [type]="ButtonType.Secondary"
-        [text]="'Сегодня'"
+        [text]="TODAY_LABEL"
         (click)="setToday()"
     />
 
