--- a/projects/front-components/src/lib/components/calendar/components/calendar-year/calendar-year.component.html
+++ b/projects/front-components/src/lib/components/calendar/components/calendar-year/calendar-year.component.html
@@ -1,17 +1,12 @@
 <div class="calendar-year-grid">
-    @for (rowIndex of rows | repeatTimes; track $index) {
+    @for (rowIndex of rows() | repeatTimes; track $index) {
         <div
             #yearRow
             class="year-row"
         >
             @let year = getYear(rowIndex);
 
-            <div
-                class="year-column"
-                [class.year-column_disabled]="isDisabledYear(year)"
-            >
-                {{ year }}
-            </div>
+            <div class="year-column">{{ year }}</div>
 
             <div class="month-list">
                 @for (monthShortName of MONTHS_SHORT; track $index; let monthIndex = $index) {
@@ -21,7 +16,6 @@
                         [displayValue]="monthShortName"
                         [item]="item"
                         [isToday]="itemIsToday(item)"
-                        [isDisabled]="isDisabledMonth(item)"
                         (click)="onItemClick(item)"
                     />
                 }
