--- a/projects/test-app/src/app/test-modal/test-modal.component.html
+++ b/projects/test-app/src/app/test-modal/test-modal.component.html
@@ -1,21 +1,59 @@
-<div class="test-modal">
-    <ss-lib-modal
-        [modalData]="{
-            title: data.title,
-            description: data.description,
-            badgeProps: data.badgeProps,
-            contentRef: modalContent,
-            footerRef: modalFooter,
-            modalConfig: data.modalConfig!
-        }"
-    ></ss-lib-modal>
-</div>
+<ss-lib-modal
+  [badgeProps]="{
+        icon: IconType.ImagePlus,
+        size: ExtraSize.lg,
+        shape: Shape.Square,
+        status: Status.Default
+      }"
+  [titleHeader]="'Какой то title'"
+  [descriptionHeader]="'Какой то description'"
+  [actionsRef]="actions"
+  [contentRef]="contentRef"
+>
+</ss-lib-modal>
 
-<ng-template #modalContent>
-    <div>Content</div>
+<ng-template #contentRef>
+  <ss-lib-form-field
+    [label]="'Название'"
+    [hint]="'Подсказка'"
+    [errorText]="'Неверно заполнено'"
+    [showValidationFieldIcon]="true"
+  >
+    <ss-lib-input
+      fieldCtrl
+      [formControl]="inputCtrl"
+      [placeholder]="'oleg@mail.ru'"
+    />
+  </ss-lib-form-field>
+  <ss-lib-form-field
+    [label]="'Название'"
+    [hint]="'Подсказка'"
+    [errorText]="'Неверно заполнено'"
+    [showValidationFieldIcon]="true"
+  >
+    <ss-lib-input
+      fieldCtrl
+      [formControl]="inputCtrl"
+      [placeholder]="'oleg@mail.ru'"
+    />
+  </ss-lib-form-field>
+  <ss-lib-form-field
+    [label]="'Название'"
+    [hint]="'Подсказка'"
+    [errorText]="'Неверно заполнено'"
+    [showValidationFieldIcon]="true"
+  >
+    <ss-lib-input
+      fieldCtrl
+      [formControl]="inputCtrl"
+      [placeholder]="'oleg@mail.ru'"
+    />
+  </ss-lib-form-field>
+
 </ng-template>
 
-<ng-template #modalFooter>
-    <div>Footer</div>
-</ng-template>
 
+
+<ng-template #actions>
+<ss-lib-modal-action-apply (close)="close()" (onApply)="apply()" [cancelText]="'Отмена'" [applyText]="'Сохранить'"></ss-lib-modal-action-apply>
+</ng-template>
