--- a/projects/test-app/src/app/stand/stand.component.html
+++ b/projects/test-app/src/app/stand/stand.component.html
@@ -1,5 +1,5 @@
 <div class="spinners">
-  <ss-lib-spinner [text]="true"></ss-lib-spinner>
+  <ss-lib-spinner [displaySpinnerText]="true"></ss-lib-spinner>
 </div>
 <ss-lib-icon [icon]="IconType.Bell" [color]="Colors.IconOnDisabled"/>
 
@@ -395,13 +395,21 @@
 <ss-lib-button
     [type]="ButtonType.Primary"
     [text]="'Модалка - компонент'"
-    (click)="openModalWithComponent()"
+    (click)="openTestModal()"
 />
 <br>
 
 <ss-lib-button
     [type]="ButtonType.Primary"
     [text]="'Модалка - confirm'"
-    (click)="openConfirm()"
+    (click)="openTestConfirmModal()"
 />
 <br>
+
+<ss-lib-button
+  [type]="ButtonType.Primary"
+  [text]="'Модалка - light-box'"
+  (click)="openLightBoxModal()"
+/>
+<br>
+
