feature/2905: add ss-lib-datapicker

--- a/projects/front-components/src/lib/components/calendar/calendar.component.html
+++ b/projects/front-components/src/lib/components/calendar/calendar.component.html
@@ -16,8 +16,9 @@
                 <ss-lib-calendar-sheet
                     [value]="value()"
                     [month]="currentMonth()"
-                    [min]="min()!"
-                    [max]="max()!"
+                    [min]="min()"
+                    [max]="max()"
+                    (todaySelected)="onTodaySelected($event)"
                     (dayClick)="onDayClick($event)"
                 />
             } @else {
