--- a/projects/front-components/src/lib/components/buttons/preview-button/preview-button.component.scss
+++ b/projects/front-components/src/lib/components/buttons/preview-button/preview-button.component.scss
@@ -1,23 +1,23 @@
 button.custom-button.type-preview {
-    padding: 4px;
-    background: #191919;
-    border-radius: var(--border-radius-round);
+	padding: 4px;
+	background: #191919;
+	border-radius: var(--border-radius-round);
 }
 
 button.custom-button:hover.type-preview {
-    background: #2D2D2D;
+	background: #2d2d2d;
 
-    ss-lib-icon {
-        opacity: 60%
-    }
+	ss-lib-icon {
+		opacity: 60%;
+	}
 }
 
 button.custom-button:active.type-preview {
-    background: #525250;
+	background: #525250;
 }
 
 button.custom-button:focus-visible.type-preview {
-    outline: none;
-    background: #191919;
-    box-shadow: var(--focus-rings-focus-ring);
+	outline: none;
+	background: #191919;
+	box-shadow: var(--focus-rings-focus-ring);
 }
